@@ -213,8 +213,6 @@ do {									\
 
 #define LONG_LONG_TYPE_SIZE 64
 
-#define CHAR_TYPE_SIZE 8
-
 #define FLOAT_TYPE_SIZE 32
 
 #define DOUBLE_TYPE_SIZE 64
