@@ -125,7 +125,6 @@ extern int target_flags;
 /*}}}*/ 
 /*{{{  Layout of Source Language Data Types.  */ 
 
-#define CHAR_TYPE_SIZE 		 8
 #define SHORT_TYPE_SIZE 	16
 #define INT_TYPE_SIZE 		32
 #define LONG_TYPE_SIZE 		32
